--- a/src/app/Modules/login/components/login/login.component.html
+++ b/src/app/Modules/login/components/login/login.component.html
@@ -38,7 +38,7 @@ style="background-image: url(https://images.unsplash.com/photo-1624916888581-489
                 Registrarme
             </a>
                 
-                <button routerLink=""
+                <button  type="submit"
                      class="px-4 py-2 ml-4 font-semibold cursor-pointer text-center focus:outline-none transition hover:shadow-lg shadow hover:bg-indigo-700 rounded-full text-white bg-indigo-600 ">
           Inciar Sesion
       </button>
