--- a/src/app/Modules/login/components/registrar/registrar.component.css
+++ b/src/app/Modules/login/components/registrar/registrar.component.css
@@ -7,3 +7,22 @@
 .example-full-width {
   width: 100%;
 }
+.example-container mat-form-field + mat-form-field {
+  margin-left: 8px;
+}
+
+.example-right-align {
+  text-align: right;
+}
+
+input.example-right-align::-webkit-outer-spin-button,
+input.example-right-align::-webkit-inner-spin-button {
+  display: none;
+}
+
+.example-events {
+  height: 200px;
+  border: 1px solid #555;
+  overflow: auto;
+}
+
