--- a/src/app/Modules/login/components/registrar/registrar.component.html
+++ b/src/app/Modules/login/components/registrar/registrar.component.html
@@ -1,32 +1,35 @@
 <body class="bg-gray-500 max-w-screen-2xl py-6 ">
   <section class="max-w-4xl p-6 mx-auto bg-indigo-1280 rounded-lg shadow-md dark:bg-white ">
       <h1 class="text-xl font-bold text-dark capitalize dark:text-dark">Registrarme</h1>
-      <form [formGroup]="formularioRegistro" (ngSubmit)="submit()">
+      <form [formGroup]="formularioRegistro" (ngSubmit)="submit()" >
           <div class="grid grid-cols-1 gap-6 mt-4 sm:grid-cols-2">
               <div>
                 <mat-form-field class="example-full-width"> 
                 <mat-label>Nombre completo</mat-label>
-                    <input matInput type="text" formControlName="nombreP" required placeholder="Escribe el nombre del producto" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                    <input matInput type="text" formControlName="nombreP"  required placeholder="Escribe el nombre del producto" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
                   </mat-form-field>
               </div>
               <div>
                 <mat-form-field class="example-full-width"> 
                   <mat-label>Correo electronico</mat-label>
-                      <input matInput type="text" formControlName="correo" required placeholder="Escribe el nombre del producto" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                      <input matInput type="text" formControlName="correo"  required placeholder="Escribe el nombre del producto" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
                     </mat-form-field>
               </div>
 
               <div>
                 <mat-form-field class="example-full-width"> 
                   <mat-label>Contraseña</mat-label>
-                      <input matInput type="text" formControlName="contraseña" required placeholder="Escribe el nombre del producto" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                    </mat-form-field>
+                  <input matInput type="password" required formControlName="contraseña">
+                    
+                </mat-form-field>
               </div>
 
               <div>
                 <mat-form-field class="example-full-width"> 
                   <mat-label>Confirmar contraseña</mat-label>
-                      <input matInput type="text" formControlName="confirmarContraseña" required placeholder="Escribe el nombre del producto" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                      <input matInput type="password" formControlName="confirmarContraseña" required placeholder="Escribe el nombre del producto" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                      
+                    
                     </mat-form-field>
               </div>
               <div>
@@ -59,12 +62,15 @@
                 <mat-form-field appearance="fill">
                   <mat-label>Fecha de nacimiento</mat-label>
                   <div class="flex justify-between">
-                  <input matInput formControlName="fechaN" required [matDatepicker]="picker">
-                  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                  <mat-datepicker #picker startView="year" [startAt]="startDate"></mat-datepicker>
-                </div>
-                  <mat-hint>Mes/Dia/Año</mat-hint>
+                    
+                      <input matInput [matDatepicker]="picker"  (dateChange)="onDateChange($event)" formControlName="calendario">
+                      
+                      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                      <mat-datepicker #picker></mat-datepicker>
                   
+                  </div>
+                 
+                  <mat-hint>Mes/Dia/Año</mat-hint>
                 </mat-form-field>
               </div>
               <div>
@@ -79,7 +85,7 @@
                     <div class="flex text-sm text-dark">
                       <label for="file-upload" class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
                         <span class="">Subir archivo</span>
-                        <input id="file-upload" name="file-upload" type="file" class="sr-only">
+                        <input id="file-upload" name="file-upload" type="file" (change)="uploadImage($event)"  class="sr-only" >
                       </label>
                     </div>
                     <p class="text-xs text-dark">
@@ -91,7 +97,7 @@
           </div>
 
           <div class="flex justify-end mt-6">
-              <button class="px-6 py-2 leading-5 text-dark transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600">Registrarme</button>
+              <button class="px-6 py-2 leading-5 text-dark transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600"   type="submit">Registrarme</button>
           </div>
       </form>
   </section>
