--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -6,11 +6,11 @@
 // Include the common styles for Angular Material. We include this here so that you only
 
 @import '@angular/material/theming';    
-@import "~swiper/css";
-@import "~swiper/css/pagination";
-@import "~swiper/css/navigation";
-@import "~swiper/css/effect-creative";
-@import "~swiper/css/effect-flip";
+@import "swiper/css";
+@import "swiper/css/pagination";
+@import "swiper/css/navigation";
+@import "swiper/css/effect-creative";
+@import "swiper/css/effect-flip";
 // Be sure that you only ever include this mixin once!
 @include mat-core();
 $candy-app-primary: mat-palette($mat-gray, 900);        
